--- a/SP/SP/LoginPage.xaml
+++ b/SP/SP/LoginPage.xaml
@@ -2,9 +2,21 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SP.LoginPage">
+    <ContentPage.ToolbarItems>
+        <ToolbarItem x:Name="DeleteButton"
+                     Text="Delete"
+                     Clicked="DeleteButton_Clicked">
+        </ToolbarItem>
+    </ContentPage.ToolbarItems>
+    
+    
     <ContentPage.Content>
-        <StackLayout>
-            
-        </StackLayout>
+        <ListView x:Name="userData">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <TextCell Text="{Binding Id}"/>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </ContentPage.Content>
 </ContentPage>
