--- a/SpFinal/SpFinal/Views/DDescriptionPage.xaml
+++ b/SpFinal/SpFinal/Views/DDescriptionPage.xaml
@@ -4,43 +4,45 @@
              Title="         Indept Description"
              x:Class="SpFinal.Views.DDescriptionPage">
     <ContentPage.Content>
-        <StackLayout Padding="10,10,10,0">
+        <ScrollView>
+            <StackLayout Padding="10,10,10,0">
 
-            <Label x:Name="DName" 
+                <Label x:Name="DName" 
                    HorizontalOptions="Center"
                    FontSize="Large"
                    FontAttributes="Bold"
                    TextDecorations="Underline"
                    TextColor="Black"
                    />
-            
-            
-            <Label x:Name="DDescripion"
-                   FontSize="Medium"
-                   Padding="0,20,0,0"
-                   TextColor="Black"/>
-            
-            
-            
-            <Label x:Name="DSymptoms"
+
+
+                <Label x:Name="DDescripion"
                    FontSize="Medium"
                    Padding="0,20,0,0"
                    TextColor="Black"/>
 
 
 
-            <Label x:Name="MGender"
+                <Label x:Name="DSymptoms"
                    FontSize="Medium"
                    Padding="0,20,0,0"
                    TextColor="Black"/>
-            
-            
-            <Label x:Name="AgeRange"
-                   FontSize="Medium"
-                   Padding="0,20,0,0"
-                   TextColor="Black"/>
-            
 
-        </StackLayout>
+
+
+                <Label x:Name="MGender"
+                   FontSize="Medium"
+                   Padding="0,20,0,0"
+                   TextColor="Black"/>
+
+
+                <Label x:Name="AgeRange"
+                   FontSize="Medium"
+                   Padding="0,20,0,0"
+                   TextColor="Black"/>
+
+
+            </StackLayout>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
